Fixed tables on smaller screens to be horizontally scrollable

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,6 +72,9 @@ h3 {
     width: 100%;
     text-align: center;
     border-collapse: collapse;
+    display: block;
+    overflow-x: auto;
+    table-layout: fixed;
     td {
         border: 2px solid;
         border-color: white;
@@ -92,7 +95,6 @@ h3 {
     img {
         height: 16em;
     }
-    table-layout: fixed;
 }
 .projects td {
     width: 50%;
@@ -116,6 +118,7 @@ h3 {
     width: 10%;
     display: block;
     text-align: center;
+    vertical-align: center;
     img {
         height: 3em;
     }
